<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userDetailScreen"
    android:background="#424549">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#7289da"

            app:title="Usuario"
            app:titleTextColor="@color/cardview_light_background" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginTop="288dp"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="Nombre"
        android:textColor="#FFEAEAEA"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/server_name"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="Server"
        android:textColor="#FFEAEAEA"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="ID"
        android:textColor="#FFEAEAEA"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>